Make reflective solution method calling slightly faster